[project]
name = "images-to-pdf"
version = "0.1.2"
description = "Convert images to PDF"
readme = "README.md"
authors = [
    { name = "Daniel Engval", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.17.0",
    "fpdf2>=2.8.3",
    "get-version>=3.5.5",
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "pywebio>=1.8.4",
    "pywebio-battery>=0.7.0",
    "userpaths>=0.1.3",
]

[project.scripts]
images-to-pdf = "images_to_pdf.cli:main"
images-to-pdf-gui = "images_to_pdf.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
